add flexbox to the steps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,8 +142,6 @@ hero-cta h2 {
 }
 /* Hero Style End */
 
-.intro {
-    text-align: center;
 }
 
 .intro p {
@@ -152,10 +150,10 @@ hero-cta h2 {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -164,8 +162,11 @@ hero-cta h2 {
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -176,32 +177,53 @@ hero-cta h2 {
     border-color: #39a6b2;
 }
 
-.steps div {
-    margin-bottom: 80px;
-}
-  
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-  
 .steps h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;   
 }
   
-.steps p {
+.step-text p {
     color: #39a6b2;
-    font-size: 23px;
+    font-size: 18px;
 }
 
-.steps span {
-    font-size: 38px;
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
 }
+
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-text {
+    flex: 12;
+}
+
+
 
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -250,7 +272,6 @@ hero-cta h2 {
 /* REACH OUT STYLE START */
 .contact {
     background-color: #024e76;
-    text-align: center;
 }
 
 .contact h2 {
@@ -285,4 +306,8 @@ hero-cta h2 {
   
   .contact-info a {
     color: #fce138;
+}
+
+.flex-row {
+    display: flex;
 }
