--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    margin: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -83,7 +83,8 @@ section {
     background-position: center;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;  
+    flex-wrap: wrap;
+    align-items: flex-start;  
 }
 
 .hero-form {
@@ -132,7 +133,7 @@ section {
     margin: 3.5;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 hero-cta h2 {
@@ -158,7 +159,7 @@ hero-cta h2 {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
